--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   }
