--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "leaflet": "^1.8.0",
     "ng-starrating": "^1.0.20",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
@@ -29,6 +30,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.7.11",
     "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
